@@ -1,3 +1,9 @@
+2005-05-31 Magnus Hagdorn
+ * glide_types.f90: initial surface temp for gthf calc is a run-time
+   parameter now
+ * glide_setup.f90: read surft from config file/print to log
+ * glide_lithot.f90: use surft to initialise temp distrib in lithosphere
+
 2005-05-26 Magnus Hagdorn
  * glide_types.f90: add new logical array to lithot, keeping track of
    if a cell has been covered by ice through-out model run
